# Auth_sprint_1

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  env.sample  pyproject.toml
design/: authservice_openapi.yaml  authservice_openapi_draft.yml  user_role_api.yaml  users_api.yaml
pgdatabase/: db_schema.sql
src/: Dockerfile.prod  containers.py  db.py  main.py  pywsgi.py  utils.py
src/api/: common.py
src/api/v1/: routes.py
src/api/v1/permission/: routes.py
src/api/v1/role/: routes.py
src/api/v1/user/: routes.py
src/core/: commands.py  containers.py  settings.py  utils.py
src/db/: pg.py  redis_client.py
src/models/: User.py  auth_event.py  permission.py  role.py  role_permissions.py  roles_owners.py  token.py  user.py
src/services/: base.py  permission.py  role.py  user.py  user_perms.py  user_role.py
tests/: Dockerfile
tests/functional/: conftest.py  settings.py
tests/functional/src/: test_permissions_crud.py  test_pg_database_creation.py  test_roles_crud.py  test_user.py
tests/functional/utils/: db_utils.py  extract.py  models.py
